Added Unit Test for UserService